# THIET-KE-TKB-CHO-BE

./: .gitignore  MOTA.txt  README.md  TRIETLYTHIETKE.txt  local_dev.py  push_and_run.bat  push_and_run.py
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml  render.yaml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py
backend/app/modules/activities/: __init__.py  router.py
backend/app/modules/admin/: __init__.py  router.py
backend/app/modules/ai/: __init__.py  context.py  providers.py  router.py
backend/app/modules/auth/: __init__.py
backend/app/modules/chat/: __init__.py  router.py
backend/app/modules/children/: __init__.py  router.py
backend/app/modules/media/: __init__.py  router.py  tts.py
backend/app/modules/rewards/: __init__.py  router.py  service.py
backend/app/modules/schedules/: router.py
backend/app/repositories/: __init__.py  activities.py  base.py  children.py  demo_data.py  schedules.py
backend/app/schemas/: __init__.py  common.py
backend/app/services/: __init__.py  activities.py  children.py  schedules.py
backend/tests/: conftest.py  test_routers.py  test_services.py  test_smoke.py
docs/: 00_project_overview.md  01_product_vision.md  02_ui_ux_design.md  03_user_flow.md  04_child_experience.md  05_ai_system.md  06_activity_library.md  07_schedule_system.md  08_audio_voice_system.md  09_database_schema.md  10_backend_architecture.md  11_admin_panel.md  12_api_provider_system.md  13_storage_system.md  14_deployment.md  (+8 more)
(+215 files in other folders)
